<resources>
<string name="app_name">Queuing</string>

<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">Queuing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="back_twice_confirm">Press back again to exit</string>
    <string name="loc_alert_title">위치정보 설정으로 이동하시겠습니까?</string>
    <string name="loc_alert_confirm">Confirm</string>
    <string name="loc_alert_cancel">Cancel</string>
    <string name="title_activity_owner">OwnerActivity</string>
    <string name="login_name">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Sign Up</string>
    <string name="map_info">See Restaurants nearby</string>
    <string name="queue_btn">Queuing!</string>
    <string name="info_num">NUMBER</string>
    <string name="info_time">TIMINGS</string>
    <string name="info_category">CUISINES</string>
    <string name="sample_num">(213)332-7766</string>
    <string name="sample_time">12:30 PM to 11 PM</string>
    <string name="sample_category">Chinese, North Indian</string>
    <string name="num">#</string>
    <string name="signout">Sign out</string>
    <string name="info_name">Name :</string>
    <string name="info_party">Party :</string>
    <string name="info_watingtime">Waiting Time :</string>
    <string name="info_arrivaltime">Arrival Time :</string>
    <string name="info_fee">Total Fee :</string>
    <string name="myinfo">My Info</string>
    <string name="myreservationinfo">Reservation Info</string>
    <string name="favorite">Favorites</string>
    <string name="sign_in">Sign In</string>
    <string name="team_name">N P C</string>
</resources>
