<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:background="#607D8B">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="5"
        android:weightSum="10"
        android:orientation="vertical"
        android:background="#607D8B">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>
            <EditText
                android:id="@+id/u_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/group_top"
                android:hint="@string/login_name"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                />
            <EditText
                android:id="@+id/u_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/group_row"
                android:hint="@string/login_email"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />
            <EditText
                android:id="@+id/u_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/group_bottom"
                android:hint="@string/login_password"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3">
            <TextView
                android:background="@drawable/group_button"
                android:id="@+id/login_button"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50px"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
