<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:elevation="20dp"
        android:orientation="vertical"
        android:background="#009688">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:gravity="left"
                android:background="#00796B">
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/back_btn_login"
                    android:paddingTop="5dp">
                    <LinearLayout
                        android:id="@+id/realback_signin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_navigate_before_white_24dp">

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <EditText
            android:id="@+id/id"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/group_top"
            android:hint="@string/login_email"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#757575"
            android:elevation="5dp"


            />
        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/group_bottom"
            android:hint="@string/login_password"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#757575"
            android:elevation="5dp"/>
        <TextView
            android:background="@drawable/group_button"
            android:id="@+id/login_button"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50px"
            android:elevation="5dp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="#004D40">
        <TextView
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:textColor="#9E9E9E"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/team_name"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="13dp"
            android:textColor="#9E9E9E"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="Contact : cheongwh@me.com"
            />
        <TextView
            android:layout_width="match_parent"
            android:textSize="13dp"
            android:textColor="#9E9E9E"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="Tel : (213)332-7766"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</LinearLayout>