<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/accent_material_light"
        android:elevation="5dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:id="@+id/confirm_back_btn"
            android:layout_alignParentLeft="true">
        <FrameLayout
            android:id="@+id/realback_confirm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_navigate_before_white_24dp"

            >
        </FrameLayout>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:textStyle="normal"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Confirm Info"
                android:textSize="18dp"
                android:textColor="#FFFFFF"
                />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/menu_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        </FrameLayout>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="horizontal"
            android:elevation="5dp"
            android:background="#FAFAFA">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_name"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:text="@string/info_party"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_watingtime"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_arrivaltime"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:text="@string/info_fee"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"/>
                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/confirm_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/confirm_party"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/confirm_waitingtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="20 min"
                        android:textColor="#212121"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/confirm_arrivaltime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="12 : 30"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/confirm_fee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="0.5 USD"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#E0E0E0"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal|bottom"
                    android:text="You should arrive at least 5 min before."/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="Otherwise, the reservation will be canceled."/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F44336"
            android:elevation="5dp">
            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="normal"
                android:text="Confirm"
                android:textSize="18dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
