<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:elevation="5dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_navigate_before_black_24dp"
            android:id="@+id/reservationinfo_back_btn"
            >

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Reservation Info"
                android:textSize="25dp"
                android:textColor="#000000"
                />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/menu_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        </FrameLayout>



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:background="#FAFAFA"
            android:elevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_name"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_party"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_watingtime"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_fee"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="right|center_vertical"/>
                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/reserv_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/reserv_party"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/reserv_waitingtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#212121"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/reserv_fee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textColor="#212121"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FAFAFA"
            android:elevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#009688"
                    android:textSize="60dp"
                    android:textStyle="bold"
                    android:paddingLeft="70dp"
                    android:gravity="center_vertical|right"
                    android:paddingRight="20dp"
                    android:text="@string/num"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/reserv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:textSize="60dp"
                    android:gravity="center_vertical" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#009688"
                    android:gravity="bottom"
                    android:text="Left"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#E0E0E0"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal|bottom"
                    android:text="You should arrive at least 5 min before."/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="Otherwise, the reservation will be canceled."/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F44336"
            android:elevation="5dp">
            <TextView
                android:textStyle="bold"
                android:id="@+id/reserv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="Cancel reservation"
                android:textSize="25dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>